# WEB_HW_09

./: README.md  clean_db.py  colors.py  config.ini  connection.py  json_to_db.py  main.py  models.py  pyproject.toml  scraping.py
